--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 Entre em contato conosco!
             </h4>
         </div>
-        <a href="http://wa.me/5511973010739" class="midia">
+        <a href="#" class="midia">
             <h1><img src="img/icons8-whatsapp.svg" alt="WhatsApp Ícone"></h1>
         </a>
-        <a href="http://" class="midia">
+        <a href="#" class="midia">
             <h1><img src="img/icons8-instagram.svg" alt=""></h1>
         </a>
     </section>
